--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     <header class="header" id="header">
       <div class="container">
         <div class="row align-items-center justify-content-between navigation">
-          <div class="col-12 col-md-4 reg">
-            <button class="reg__btn_log button">Log in</button>
-            <button class="reg__btn_up button">Sign up</button>
-          </div>
+          <ul class="reg col-12 col-md-4">
+            <li class="reg__button">
+              <button class="reg__btn_log button">Log in</button>
+            </li>
+            <li class="reg__button">
+              <button class="reg__btn_up button">Sign up</button>
+            </li>
+          </ul>
+
           <div class="col-12 col-md-4">
             <a href="#" class="logo">URLAUBSGLÜCK</a>
           </div>
